修改已弃用方法